[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assests/GamePlayTextures/Bosses/mage-3-87x110.png" type="Texture" id=1]
[ext_resource path="res://Script/Boss_3.gd" type="Script" id=2]
[ext_resource path="res://Assests/Fonts/font.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[node name="Boss_3" type="Area2D" groups=[
"boss",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12.6534, -136.423, 2.49986, -151.576, 36.735, -150.454, 26.0716, -156.627, 10.9183, -156.066, 5.86725, -162.801, 12.602, -173.464, 21.0205, -177.393, 41.2248, -176.27, 12.602, -165.046, 14.8469, -161.117, 36.1737, -161.117, 45.7147, -151.015, 33.3676, -140.913, 33.9288, -134.178, 25.5103, -125.198, 42.9085, -126.882, 32.2451, -117.341, 47.3983, -123.515, 58.623, -122.954, 75.4599, -99.943, 84.4396, -101.627, 91.1743, -97.1369, 88.3682, -88.7184, 102.399, -85.9123, 100.154, -95.4532, 111.379, -105.555, 118.113, -106.678, 118.675, -116.78, 122.603, -107.239, 133.828, -101.627, 136.073, -96.5757, 140.001, -93.7695, 134.95, -88.7184, 138.318, -84.7898, 139.44, -73.5652, 123.726, -58.9732, 115.307, -58.9732, 106.328, -43.2587, 108.573, -35.9627, 101.838, -26.4218, 105.205, -22.4932, 114.746, -26.983, 126.532, -27.5443, 137.757, -17.4421, 136.634, -10.1461, 138.879, 6.69084, 125.971, 20.7216, 114.746, 21.2829, 110.256, 24.089, 101.277, 20.7216, 93.4193, 13.9868, 85.0008, 13.4256, 72.6537, -3.41132, 60.3066, -2.28885, 45.7147, 15.1093, 46.2759, 29.1401, 44.0309, 34.7524, 49.6433, 40.9259, 62.5516, 61.1303, 68.7251, 60.0078, 60.8679, 45.977, 60.8679, 39.2422, 77.7048, 32.5075, 84.4396, 36.4361, 91.7356, 36.4361, 97.3479, 42.6096, 95.6642, 50.4669, 90.0519, 52.7118, 82.7559, 48.2219, 81.6334, 43.7321, 75.4599, 40.3647, 67.0414, 44.2933, 78.2661, 53.273, 77.7048, 63.3752, 76.0211, 70.1099, 77.7048, 75.7222, 72.6537, 82.457, 83.8784, 85.2632, 90.0519, 79.0896, 101.277, 78.5284, 105.766, 85.8244, 103.521, 93.1204, 108.011, 94.8041, 109.134, 99.8552, 105.205, 105.468, 99.5928, 105.468, 96.7867, 99.294, 96.7867, 91.998, 99.5928, 85.2632, 94.5417, 85.2632, 91.1743, 90.3143, 86.1233, 97.049, 78.8273, 106.59, 50.2045, 110.519, 46.2759, 107.151, 40.6636, 107.151, 35.6125, 111.641, 32.2451, 116.131, 38.9799, 120.621, 43.4697, 124.549, 42.9085, 128.478, 38.9799, 135.213, 38.4186, 139.703, 32.2451, 144.192, 25.5103, 139.703, 26.0716, 131.845, 32.2451, 129.039, 9.23463, 136.636, 17.0919, 144.494, 14.8469, 154.035, 12.602, 165.82, 12.602, 175.923, 3.0611, 175.923, -3.67368, 166.382, 5.30602, 163.014, 5.30602, 156.841, 9.79587, 152.912, 2.49986, 147.3, -3.11246, 144.494, -3.11246, 128.218, -8.72476, 127.096, -13.7758, 132.708, -23.3168, 127.657, -28.3678, 116.432, -35.1026, 107.452, -49.1334, 115.31, -62.6029, 115.871, -74.95, 105.769, -74.3888, 97.3503, -80.0011, 92.8604, -87.8583, 100.156, -95.1543, 99.5952, -98.5217, 104.646, -105.818, 100.156, -106.379, 93.4217, -100.767, 88.9318, -96.838, 88.9318, -93.4706, 95.6666, -89.542, 90.0543, -73.8276, 87.8094, -70.4602, 93.9829, -68.7765, 99.034, -60.9193, 100.156, -56.4294, 104.085, -49.1334, 102.963, -42.3986, 95.6666, -41.8374, 82.197, -48.5722, 77.146, -57.5519, 76.0235, -63.1642, 68.1663, -63.7254, 56.9416, -63.7254, 51.3293, -58.1131, 65.3601, -48.0109, 66.4826, -42.9599, 64.2377, -33.9802, 59.7478, -22.7555, 57.5029, -11.5309, 44.5946, 0.816162, 28.3189, -4.23491, 22.7066, -12.0921, 27.7576, -20.5106, 28.8801, -26.1229, 21.0229, -25.0005, 14.8493, -35.1026, 13.1656, -40.1537, 21.5841, -49.1334, 12.6044, -41.2762, 13.1656, -44.6435, 5.86963, -56.4294, -3.6713, -68.7765, -4.23253, -77.1949, 5.30839, -72.1439, 11.4819, -74.3888, 24.9515, -77.7562, 15.4105, -83.9297, 12.0432, -87.8583, 8.11455, -93.4706, 12.0432, -105.818, 10.3595, -114.236, 5.30839, -122.093, -4.79377, -122.655, -14.8959, -118.726, -24.4369, -107.501, -32.2941, -97.3993, -33.4165, -89.542, -31.1716, -85.6134, -33.9778, -90.1033, -40.0294, -92.3482, -48.4479, -106.379, -62.4787, -106.94, -66.9685, -117.042, -65.8461, -120.41, -54.0602, -123.216, -72.0196, -121.532, -74.8258, -139.492, -89.4178, -137.808, -104.01, -132.757, -110.745, -125.461, -118.041, -117.042, -119.163, -114.797, -128.704, -111.991, -116.918, -100.205, -114.673, -97.3993, -109.622, -87.2971, -102.887, -85.0522, -93.9076, -79.4399, -93.3464, -68.7765, -107.938, -74.3888, -113.551, -71.0214, -123.092, -67.0928, -123.653, -62.6029, -128.704, -53.6232, -135.439, -40.1537, -121.408, -31.7352, -117.479, -21.0718, -116.357, -31.174, -123.653, -22.7555, -125.898, -18.2657, -142.735 )

[node name="gunsPosition" type="Node2D" parent="."]

[node name="UpGun" type="Node2D" parent="gunsPosition"]
position = Vector2( -187.98, -92.6535 )

[node name="DownGun" type="Node2D" parent="gunsPosition"]
position = Vector2( -155.016, 46.3268 )

[node name="FireDelayerTimer" type="Timer" parent="."]
one_shot = true

[node name="Control" type="Control" parent="."]
margin_left = -99.5946
margin_top = -236.53
margin_right = 125.405
margin_bottom = -184.53
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeProgress" type="ProgressBar" parent="Control"]
margin_left = 24.8824
margin_top = 16.3606
margin_right = 210.882
margin_bottom = 50.3606
custom_fonts/font = SubResource( 1 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_shape_entered" from="." to="." method="_on_Boss_3_area_shape_entered"]
[connection signal="timeout" from="FireDelayerTimer" to="." method="_on_FireDelayerTimer_timeout"]
